simplify service restarts

--- a/novnc.yml
+++ b/novnc.yml
@@ -22,19 +22,14 @@
     compute_ip: "{{ ansible_default_ipv4.address }}"
   tasks: 
 
-
   - name: Deploy Nova Compute Template  
     template: src=files/nova-compute.conf.j2 dest=/etc/nova/nova.conf
 
   - name: Restart Nova Compute Service
-    service: name={{ item }} state=restarted
-    with_items: 
-    - openstack-nova-compute
+    service: name=openstack-nova-compute state=restarted
 
 - hosts: controller
   remote_user: root
   tasks: 
   - name: Restart Nova Compute and VNC Proxy Service
-    service: name={{ item }} state=restarted
-    with_items: 
-    - openstack-nova-novncproxy
+    service: name=openstack-nova-novncproxy state=restarted
